--- a/packar/src/components/HomePage.css
+++ b/packar/src/components/HomePage.css
@@ -1,41 +1,67 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
 
-*{
-    font-family: Montserrat;
+
+body {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Lilita One', sans-serif !important;
+    font-weight: 500;
+    min-height: 100vh;
+    background: url('https://res.cloudinary.com/dhws4e2ty/image/upload/v1673363219/cute-animal-colorful-white-cats-seamless-pattern-wallpaper-with-design-orange-vector-safeimagekit_auwteb.png');
+    background-size: 40%;
+    background-repeat: repeat;
 }
 
 .home {
-    width: 100vw;
     height: 100vh;
-    padding: 0px;
-    margin: 0px;
+    gap: 100px;
+    max-width: 1100px;
+    margin-inline: auto !important;
     text-align: center;
-    font-family: sans-serif;
-    background-color: rgba(255, 193, 70, 0.173);
 }
 
-.container {
-    min-width: 100vw;
-    min-height: 100vh;
+p {
+    color: rgb(163, 106, 40);
+    font-weight: 600;
 }
 
 .title {
     padding: 50px;
-    margin: 0px;
+    color: rgb(163, 106, 40);
+    font-size: 3rem;
+    
 }
 
 .image {
-    margin-top: 100px;
+    margin-top: 20px;
+    object-fit: cover;
+    height: 50%;
+    width: 60%;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.598);
 }
 
 .newCatBtn {
-    width: 200px;
-    font-family: Montserrat;
-    font-weight:500;
     margin-bottom: 20px;
-    background-color: rgb(211, 162, 36);
-   border-color: rgb(211, 162, 36);
-    box-shadow: 2px 2px 8px 1px rgba(0, 0, 0, 0.2);
+    border: unset;
+    background-color: transparent;
+}
+.newCatBtn img:hover {
+    transform: rotate(15deg) scale(1.1);
+    filter:drop-shadow(0 0 5px rgb(129, 129, 129));
 }
 
+.newCatBtn img {
+    transition: transform 0.3s ease-in-out, filter 0.3s ease-in-out;
+    width: 50px;
+}
 
+@keyframes catBtn {
+    0% {
+        
+    }
+    100% {
+        transform: rotate(15deg);
+    }
+}
